# mmdgpy

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  requirements.txt  test.yml
docker/: dockerfile
docs/: conf.py  index.rst
doxygen/: Doxyfile
main/: .gitignore  main_comparison.py  main_mmdg.py  main_roughness.py  params_comparison.py  params_dg.py  params_mmdg.py  params_roughness.py  plot_comparison.py
mmdgpy/dg/: dg.py  mmdg1.py  mmdg2.py
mmdgpy/grids/: grids.py  random.py
mmdgpy/problems/: dgproblem.py  dgproblem1.py  dgproblem2.py  mmdgproblem.py  mmdgproblem1.py  mmdgproblem2.py  mmdgproblem3.py  mmdgproblem4.py  mmdgproblem5.py  mmdgproblemvertical.py  problemcomparison.py  problemroughness.py
test/: .gitignore  main_dg.py  params_dg.py  params_mmdg.py  test_dg.py  test_mmdg.py
